--- a/DotnetMemoryTest.csproj
+++ b/DotnetMemoryTest.csproj
@@ -13,7 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove=".gitattributes" />
+    <None Remove=".gitignore" />
     <None Remove="Directory.Build.props" />
+    <None Remove="download_loop.bat" />
   </ItemGroup>
 
   <ItemGroup>
